Fixed CSS block overlapping

--- a/includes/main.css
+++ b/includes/main.css
@@ -75,7 +75,6 @@ a:hover{
 #tweet{
 	float:right;
 	width:500px;
-	max-height:150px;
 	margin-right:30px;
 	margin-top:13px;
 	margin-bottom:10px;
